Implemented Json array assertion methods.